# SoapySDR

./: CMakeLists.txt
.github/workflows/: ci.yml
luajit/: Lib.lua
luajit/tests/: CMakeLists.txt
matlab-octave/: CMakeLists.txt
matlab-octave/native/: SoapySDR_.cpp  SoapySDR_MEX.cpp
mex/: CMakeLists.txt  README.md
mex/common/apps/: ReceiveAndPlot.m
mex/common/m/: SoapySDR_Device.m  SoapySDR_ErrorCode.m  SoapySDR_LogLevel.m  SoapySDR_RxStream.m  SoapySDR_Stream.m  SoapySDR_StreamFormat.m  SoapySDR_Time_ticksToTimeNs.m  SoapySDR_Time_timeNsToTicks.m  SoapySDR_TxStream.m  SoapySDR_clearLogHandler.m  SoapySDR_enumerateDevices.m  SoapySDR_getAPIVersion.m  SoapySDR_getScriptABIVersion.in.m  SoapySDR_log.m  SoapySDR_logf.m  SoapySDR_registerLogHandler.m  SoapySDR_timeNsToTicks.m
mex/common/native/: SoapySDR_MEX.cpp
mex/common/tests/: TestDeviceAPI.m  TestEnumerateDevices.m  TestErrorCodes.m  TestLogger.m  TestTimeConversion.m
mex/matlab/: CMakeLists.txt
mex/matlab-octave/: CMakeLists.txt
mex/matlab-octave/m/: SoapySDR_ArgInfoType.m  SoapySDR_Device.m  SoapySDR_Direction.m  SoapySDR_StreamFlag.m  SoapySDR_TxStream.m  SoapySDR_getABIVersion.m  SoapySDR_getLibVersion.m  SoapySDR_getMEXABIVersion.m  SoapySDR_setLogLevel.m  SoapySDR_ticksToTimeNs.m
mex/matlab-octave/matlab/: CMakeLists.txt
mex/matlab-octave/octave/: CMakeLists.txt  FindOctave.cmake
mex/matlab-octave/tests/: TestBuildInfo.m  TestConstants.m  TestDeviceAPI.m  TestLogger.m
mex/native/: SoapySDR_MEX.cpp
mex/native/include/mexplus/: dispatch.h  mxarray.h  mxtypes.h
mex/octave/: CMakeLists.txt  FindOctave.cmake
mex/octave/patches/: constructor-error-hack.diff
mex/scilab/: .gitignore  CMakeLists.txt  FindScilab.cmake  README.md  build_soapysdr.sce  builder.in.sce
