configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_getScriptABIVersion.in.m
    ${CMAKE_CURRENT_BINARY_DIR}/m/SoapySDR_getScriptABIVersion.m)

set(m_files
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_ArgInfoType.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_clearLogHandler.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_Device.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_Direction.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_ErrorCode.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_getABIVersion.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_getAPIVersion.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_getLibVersion.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_getMEXABIVersion.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_logf.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_LogLevel.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_log.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_registerLogHandler.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_RxStream.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_setLogLevel.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_StreamFlag.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_StreamFormat.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_Stream.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_ticksToTimeNs.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_timeNsToTicks.m
    ${CMAKE_CURRENT_SOURCE_DIR}/m/SoapySDR_TxStream.m
    ${CMAKE_CURRENT_BINARY_DIR}/m/SoapySDR_getScriptABIVersion.m)

set(test_names
    TestBuildInfo
    TestConstants
    TestDeviceAPI
    TestEnumerateDevices
    TestErrorCodes
    TestLogger
    TestTimeConversion)

add_subdirectory(matlab)
add_subdirectory(octave)
